[Feature #165036044] Enhance app skeletal structure

--- a/app/src/main/res/layout/activity_moshey.xml
+++ b/app/src/main/res/layout/activity_moshey.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MosheyActivity">
+        tools:context=".ui.MosheyActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -52,6 +52,7 @@
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/moshey_app_bar"
+                    app:titleTextColor="@android:color/white"
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
                     app:layout_collapseMode="pin" />
