[Feature #165036044] Display Ticket For Booking

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,7 +13,7 @@
         <item name="titleTextAppearance">@style/TextAppearance.AppCompat.Title</item>
     </style>
 
-    <style name="Base.Widget.Moshey.TextView.Title" parent="Base.Widget.AppCompat.TextView">
+    <style name="Moshey.Title" parent="TextAppearance.MaterialComponents.Headline1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
@@ -21,7 +21,7 @@
         <item name="android:textSize">25sp</item>
     </style>
 
-    <style name="Base.Widget.Moshey.TextView.Subtext" parent="Base.Widget.AppCompat.TextView">
+    <style name="Moshey.Subtext" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-condensed-light</item>
