--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -23,43 +23,43 @@
 
             <TextView
                 android:id="@+id/text_view_from_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/from"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_from"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                android:id="@+id/text_view_my_from"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_from_title"
                 tools:text="Nairobi" />
 
             <TextView
                 android:id="@+id/text_view_to_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/to"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_to"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                android:id="@+id/text_view_my_to"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_to_title"
                 tools:text="Mombasa" />
 
             <TextView
                 android:id="@+id/text_view_ticket_id_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/ticked_id"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_to" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_my_to" />
 
             <TextView
                 android:id="@+id/text_view_ticket_id"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
