--- a/app/src/main/res/layout/tickets_available.xml
+++ b/app/src/main/res/layout/tickets_available.xml
@@ -3,48 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/ticket_list_recycler_margin"
-        android:background="@android:color/white"
+        android:elevation="8dp"
         android:minHeight="150dp"
         app:cardCornerRadius="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
                 android:id="@+id/text_view_from_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/from"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_view_from"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_from_title"
                 tools:text="Nairobi" />
 
             <TextView
                 android:id="@+id/text_view_to_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/to"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_view_to"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_to_title"
                 tools:text="Mombasa" />
@@ -52,7 +51,7 @@
 
             <TextView
                 android:id="@+id/text_view_ticket_remaining_title"
-                style="@style/Base.Widget.Moshey.TextView.Title"
+                style="@style/Moshey.Title"
                 android:text="@string/tickets_remaining"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -60,7 +59,7 @@
 
             <TextView
                 android:id="@+id/text_view_ticket_remaining"
-                style="@style/Base.Widget.Moshey.TextView.Subtext"
+                style="@style/Moshey.Subtext"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_remaining_title"
