--- a/app/src/main/res/layout/tickets_available.xml
+++ b/app/src/main/res/layout/tickets_available.xml
@@ -3,17 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:clipToPadding="false"
+        app:cardUseCompatPadding="true"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/ticket_list_recycler_margin"
-        android:elevation="8dp"
         android:minHeight="150dp"
         app:cardCornerRadius="4dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -67,6 +71,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_book_ticket"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
@@ -74,6 +79,7 @@
                 android:text="@string/book"
                 android:textColor="@android:color/black"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_view_ticket_remaining" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
