--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="8dp">
 
             <TextView
@@ -51,19 +51,29 @@
             <TextView
                 android:id="@+id/text_view_ticket_id_title"
                 style="@style/Moshey.Title"
+                android:layout_margin="4dp"
                 android:text="@string/ticked_id"
+                android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_my_to" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_my_from" />
 
             <TextView
                 android:id="@+id/text_view_ticket_id"
                 style="@style/Moshey.Subtext"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_id_title"
                 tools:text="#3ER456" />
+
+            <TextView
+                android:id="@+id/text_view_ticket_date_booked"
+                style="@style/Moshey.Subtext"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_id_title"
+                tools:text="12th April 2019,12:17 PM" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
