--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="1"
         android:title="@string/book"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_about"
+        android:icon="@drawable/ic_info"
+        android:orderInCategory="2"
+        android:title="@string/book"
+        app:showAsAction="ifRoom" />
 </menu>
