--- a/app/src/main/res/layout/tickets_available.xml
+++ b/app/src/main/res/layout/tickets_available.xml
@@ -7,17 +7,17 @@
 
     <com.google.android.material.card.MaterialCardView
         style="@style/Widget.MaterialComponents.CardView"
-        android:clipToPadding="false"
-        app:cardUseCompatPadding="true"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/ticket_list_recycler_margin"
+        android:layout_margin="@dimen/normal_margin"
+        android:clipToPadding="false"
         android:minHeight="150dp"
         app:cardCornerRadius="4dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             <TextView
                 android:id="@+id/text_view_from"
                 style="@style/Moshey.Subtext"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/text_view_from_title"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_from_title"
                 tools:text="Nairobi" />
 
@@ -48,7 +48,7 @@
             <TextView
                 android:id="@+id/text_view_to"
                 style="@style/Moshey.Subtext"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintRight_toRightOf="@id/text_view_to_title"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_to_title"
                 tools:text="Mombasa" />
 
@@ -71,15 +71,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_book_ticket"
-                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/moshey_button_style"
+                android:backgroundTint="@color/color_secondary"
                 android:text="@string/book"
-                android:textColor="@android:color/black"
-                app:layout_constraintRight_toRightOf="parent"
+                android:textColor="?attr/colorOnSecondary"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_view_ticket_remaining" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
