--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,31 +1,25 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="Widget.Moshey.Toolbar" parent="Widget.AppCompat.Toolbar">
+    <!--TODO 8. Check on Widgets/Views with parent themes not using day and night-->
+    <style name="Widget.Moshey.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="contentInsetStart">12dp</item>
         <item name="titleTextAppearance">@style/TextAppearance.AppCompat.Title</item>
     </style>
 
+    <!--TODO 6.Theme attributes for view color/background properties - use colors-->
     <style name="Moshey.Title" parent="TextAppearance.MaterialComponents.Headline1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textSize">@dimen/title_text_size</item>
     </style>
 
     <style name="Moshey.Subtext" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-condensed-light</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="android:textSize">@dimen/sub_title_text_size</item>
     </style>
 </resources>
