Fix Night Theme

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,13 +6,13 @@
     <color name="color_secondary">#ffff56</color>
     <color name="color_secondary_variant">#ffff8a</color>
 
-    <color name="color_background">#202010</color>
+    <color name="color_background">#1b1b1b</color>
     <color name="color_surface">#121212</color>
     <color name="color_error">#cf6679</color>
 
     <color name="color_on_primary">#ffffff</color>
-    <color name="color_on_secondary">#202010</color>
+    <color name="color_on_secondary">#1b1b1b</color>
     <color name="color_on_background">#ffffff</color>
     <color name="color_on_surface">#9e9e9e</color>
-    <color name="color_on_error">#202010</color>
+    <color name="color_on_error">#1b1b1b</color>
 </resources>
